--- a/RayCarrot.WPF/RayCarrot.WPF.csproj
+++ b/RayCarrot.WPF/RayCarrot.WPF.csproj
@@ -14,6 +14,7 @@
     <WarningLevel>4</WarningLevel>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -23,7 +24,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>7.1</LangVersion>
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -33,7 +33,6 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -64,13 +63,14 @@
     <Compile Include="AttachedProperties\UserLevelTagBehavior.cs" />
     <Compile Include="Behavior\BindableTreeViewSelectedItemBehavior.cs" />
     <Compile Include="Behavior\DeselectOnListBoxClick.cs" />
+    <Compile Include="Behavior\FocusElementOnLoad.cs" />
     <Compile Include="Behavior\FocusScrollViewerOnLoad.cs" />
     <Compile Include="Behavior\UnifiedMarginBehavior.cs" />
     <Compile Include="Controls\BrowseBox\BrowseBox.cs" />
     <Compile Include="Controls\BrowseBox\BrowseValidationRules.cs" />
     <Compile Include="Behavior\DecimalTextBoxBehavior.cs" />
     <Compile Include="Dialogs\Base\IWindowBaseControl.cs" />
-    <Compile Include="Dialogs\LogViewer\LogTypeToBrushConverter.cs" />
+    <Compile Include="Dialogs\LogViewer\LogLevelToBrushConverter.cs" />
     <Compile Include="Dialogs\RegistryBrowser\AccessDeniedToIconConverter.cs" />
     <Compile Include="Dialogs\RegistryBrowser\RegistrySelectionDialog.xaml.cs">
       <DependentUpon>RegistrySelectionDialog.xaml</DependentUpon>
@@ -165,7 +165,6 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="Dialogs\DialogMessageBox\DialogMessageBox.xaml">
@@ -210,25 +209,25 @@
       <Version>1.1.3.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf">
-      <Version>1.0.1</Version>
+      <Version>1.1.3</Version>
     </PackageReference>
     <PackageReference Include="Nito.AsyncEx">
       <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="PropertyChanged.Fody">
-      <Version>3.1.3</Version>
+      <Version>3.2.1</Version>
     </PackageReference>
     <PackageReference Include="RayCarrot.CarrotFramework.Abstractions">
-      <Version>1.4.0</Version>
+      <Version>1.5.1</Version>
     </PackageReference>
     <PackageReference Include="RayCarrot.IO">
-      <Version>1.2.2</Version>
+      <Version>1.3.6</Version>
     </PackageReference>
     <PackageReference Include="RayCarrot.UI">
-      <Version>1.1.4</Version>
+      <Version>1.2.1</Version>
     </PackageReference>
     <PackageReference Include="RayCarrot.Windows.Registry">
-      <Version>3.1.2</Version>
+      <Version>3.2.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
