--- a/RayCarrot.WPF/RayCarrot.WPF.csproj
+++ b/RayCarrot.WPF/RayCarrot.WPF.csproj
@@ -70,15 +70,7 @@
     <Compile Include="Controls\BrowseBox\BrowseValidationRules.cs" />
     <Compile Include="Behavior\DecimalTextBoxBehavior.cs" />
     <Compile Include="Dialogs\Base\IWindowBaseControl.cs" />
-    <Compile Include="Dialogs\LogViewer\LogLevelToBrushConverter.cs" />
-    <Compile Include="Dialogs\RegistryBrowser\AccessDeniedToIconConverter.cs" />
-    <Compile Include="Dialogs\RegistryBrowser\RegistrySelectionDialog.xaml.cs">
-      <DependentUpon>RegistrySelectionDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Dialogs\RegistryBrowser\ViewModels\FavoritesItemViewModel.cs" />
-    <Compile Include="Dialogs\RegistryBrowser\ViewModels\RegistryKeyViewModel.cs" />
-    <Compile Include="Dialogs\RegistryBrowser\ViewModels\RegistrySelectionViewModel.cs" />
-    <Compile Include="Dialogs\RegistryBrowser\ViewModels\RegistryValueViewModel.cs" />
+    <Compile Include="Logging\LogViewer\LogLevelToBrushConverter.cs" />
     <Compile Include="Controls\VMUserControl.cs" />
     <Compile Include="Controls\BrowseBox\BrowseTypes.cs" />
     <Compile Include="Dialogs\Base\DialogBaseSize.cs" />
@@ -96,13 +88,25 @@
     <Compile Include="Extensions\VisualExtensions.cs" />
     <Compile Include="Dialogs\Base\Manager\WindowDialogBaseManager.cs" />
     <Compile Include="Dialogs\Base\Manager\IDialogBaseManager.cs" />
-    <Compile Include="Framework\RCFWPF.cs" />
+    <Compile Include="Logging\SessionLogger\LogAddedEventArgs.cs" />
+    <Compile Include="DataModels\PropertyChangedEventArgs.cs" />
+    <Compile Include="App\Data\ICommonAppData.cs" />
+    <Compile Include="App\Data\UserLevel.cs" />
+    <Compile Include="App\Services.cs" />
+    <Compile Include="Logging\SessionLogger\ISessionLoggerCollection.cs" />
+    <Compile Include="Logging\SessionLogger\LogItem.cs" />
+    <Compile Include="App\Data\DefaultCommonAppData.cs" />
+    <Compile Include="Logging\BaseLogger.cs" />
+    <Compile Include="Logging\BaseLogProvider.cs" />
+    <Compile Include="Logging\DefaultLoggers.cs" />
+    <Compile Include="Logging\LoggingBuilderExtensions.cs" />
+    <Compile Include="Logging\SessionLogger\DefaultSessionLoggerCollection.cs" />
+    <Compile Include="Logging\SessionLogger\SessionLogger.cs" />
     <Compile Include="Extensions\DialogBaseControlExtensions.cs" />
     <Compile Include="Dialogs\StringInputDialog\StringInputDialog.xaml.cs">
       <DependentUpon>StringInputDialog.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Framework\Implementations\DefaultWPFRegistryBrowseUIManager.cs" />
-    <Compile Include="Framework\FrameworkConstructionExtensions.cs" />
+    <Compile Include="App\ServiceCollectionExtensions.cs" />
     <Compile Include="Dialogs\Base\Manager\IWPFStyle.cs" />
     <Compile Include="Dialogs\StringInputDialog\ViewModels\StringInputResult.cs" />
     <Compile Include="Dialogs\StringInputDialog\ViewModels\StringInputViewModel.cs" />
@@ -124,20 +128,34 @@
       <DependentUpon>DialogMessageBox.xaml</DependentUpon>
     </Compile>
     <Compile Include="Dialogs\DialogMessageBox\ViewModels\DialogMessageViewModel.cs" />
-    <Compile Include="Framework\Implementations\DefaultWPFBrowseUIManager.cs" />
-    <Compile Include="Framework\Implementations\DefaultWPFMessageUIManager.cs" />
-    <Compile Include="Framework\WPFRegistryPaths.cs" />
-    <Compile Include="Helpers\BaseRCFApp.cs" />
+    <Compile Include="UI\Implementations\DefaultWPFBrowseUIManager.cs" />
+    <Compile Include="UI\Implementations\DefaultWPFMessageUIManager.cs" />
+    <Compile Include="App\BaseApp.cs" />
     <Compile Include="Helpers\BaseValueConverter.cs" />
     <Compile Include="Helpers\BindingProxy.cs" />
     <Compile Include="Helpers\WindowHelpers.cs" />
     <Compile Include="Helpers\WPFTraceListener.cs" />
     <Compile Include="Controls\BrowseBox\BrowseBoxValidationRule.cs" />
     <Compile Include="Controls\BrowseBox\BrowseValidationRuleData.cs" />
-    <Compile Include="Dialogs\LogViewer\LogViewer.xaml.cs">
+    <Compile Include="Logging\LogViewer\LogViewer.xaml.cs">
       <DependentUpon>LogViewer.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Dialogs\LogViewer\LogViewerViewModel.cs" />
+    <Compile Include="Logging\LogViewer\LogViewerViewModel.cs" />
+    <Compile Include="UI\Browse\BrowseViewModel.cs" />
+    <Compile Include="UI\Browse\DirectoryBrowserResult.cs" />
+    <Compile Include="UI\Browse\DirectoryBrowserViewModel.cs" />
+    <Compile Include="UI\Browse\DriveBrowserResult.cs" />
+    <Compile Include="UI\Browse\DriveBrowserViewModel.cs" />
+    <Compile Include="UI\Browse\FileBrowserResult.cs" />
+    <Compile Include="UI\Browse\FileBrowserViewModel.cs" />
+    <Compile Include="UI\Browse\SaveFileResult.cs" />
+    <Compile Include="UI\Browse\SaveFileViewModel.cs" />
+    <Compile Include="UI\Interfaces\IBrowseUIManager.cs" />
+    <Compile Include="UI\Interfaces\IMessageUIManager.cs" />
+    <Compile Include="UI\MessageUIManagerExtensions.cs" />
+    <Compile Include="UI\Message\MessageType.cs" />
+    <Compile Include="UI\UserInputResult.cs" />
+    <Compile Include="UI\UserInputViewModel.cs" />
     <Compile Include="ValidationRules\Files and Directories\DirectoryExistsAndNotEmptyValidationRule.cs" />
     <Compile Include="ValidationRules\Files and Directories\DirectoryExistsValidationRule.cs" />
     <Compile Include="ValidationRules\Files and Directories\FileExistsAndNotEmptyValidationRule.cs" />
@@ -175,15 +193,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Dialogs\RegistryBrowser\RegistrySelectionDialog.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Page Include="Dialogs\StringInputDialog\StringInputDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Dialogs\LogViewer\LogViewer.xaml">
+    <Page Include="Logging\LogViewer\LogViewer.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -203,44 +217,50 @@
   <ItemGroup>
     <Resource Include="FodyWeavers.xml" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <PackageReference Include="Microsoft-WindowsAPICodePack-Shell">
-      <Version>1.1.3.3</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf">
-      <Version>1.1.3</Version>
-    </PackageReference>
-    <PackageReference Include="Nito.AsyncEx">
-      <Version>5.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="PropertyChanged.Fody">
-      <Version>3.2.1</Version>
-    </PackageReference>
-    <PackageReference Include="RayCarrot.CarrotFramework.Abstractions">
-      <Version>1.5.1</Version>
-    </PackageReference>
-    <PackageReference Include="RayCarrot.IO">
-      <Version>1.3.7</Version>
-    </PackageReference>
-    <PackageReference Include="RayCarrot.UI">
-      <Version>1.2.1</Version>
-    </PackageReference>
-    <PackageReference Include="RayCarrot.Windows.Registry">
-      <Version>3.2.1</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\RayCarrot.CarrotFramework\RayCarrot.Windows.Shell\RayCarrot.Windows.Shell.csproj">
+    <ProjectReference Include="..\..\RayCarrot.Common\RayCarrot.Common\RayCarrot.Common.csproj">
+      <Project>{bd854370-65ef-41c0-b920-7c82dd3daa63}</Project>
+      <Name>RayCarrot.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\RayCarrot.IO\RayCarrot.IO\RayCarrot.IO.csproj">
+      <Project>{e271dc05-6629-48d1-9423-fe4957eab807}</Project>
+      <Name>RayCarrot.IO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\RayCarrot.Logging\RayCarrot.Logging\RayCarrot.Logging.csproj">
+      <Project>{f0ba66a8-806b-464e-9a2a-b8050c453524}</Project>
+      <Name>RayCarrot.Logging</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\RayCarrot.UI\RayCarrot.UI\RayCarrot.UI.csproj">
+      <Project>{d5fc22f6-391e-4ef1-8818-1c2256b2816a}</Project>
+      <Name>RayCarrot.UI</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\RayCarrot.Windows.Shell\RayCarrot.Windows.Shell\RayCarrot.Windows.Shell.csproj">
       <Project>{55f49d1e-c9bd-4cc4-9ff0-d646d9f42a21}</Project>
       <Name>RayCarrot.Windows.Shell</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Dialogs\RegistryBrowser\Icons\Folder.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Dialogs\RegistryBrowser\Icons\Hidden Folder.png" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection">
+      <Version>3.1.4</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging">
+      <Version>3.1.4</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console">
+      <Version>3.1.4</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug">
+      <Version>3.1.4</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf">
+      <Version>1.1.19</Version>
+    </PackageReference>
+    <PackageReference Include="Nito.AsyncEx">
+      <Version>5.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="PropertyChanged.Fody">
+      <Version>3.2.8</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
